@@ -1,5 +1,10 @@
 2018-05-29  Mark Wielaard  <mark@klomp.org>
 
+	* readelf.c (print_debug_loc_section): Handle GNU DebugFission list
+	entries.
+
+2018-05-29  Mark Wielaard  <mark@klomp.org>
+
 	* readelf.c (print_debug): Record and reset section_info status in
 	implicit_debug_sections and print_debug_sections.
 
