@@ -1,5 +1,10 @@
 2018-05-29  Mark Wielaard  <mark@klomp.org>
 
+	* run-readelf-loc.sh: Add GNU DebugFission split-dwarf variant.
+	* run-varlocs.sh: Likewise.
+
+2018-05-29  Mark Wielaard  <mark@klomp.org>
+
 	* run-readelf-twofiles.sh: Add --debug-dump=loc testcase.
 
 2018-05-28  Mark Wielaard  <mark@klomp.org>
